--- a/Front/Banco-de-Talentos/src/app/shared/components/certs-pers-crd/certs-pers-crd.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/certs-pers-crd/certs-pers-crd.component.html
@@ -83,44 +83,74 @@
         aptitudes.
       </span>
     </div>
-    <button
-      pButton
-      class="p-button-outlined border-300 w-full flex flex-column"
-      (click)="fileUpload.click()"
+    <form
+      class="w-12 flex flex-column"
+      autocomplete="off"
+      [formGroup]="fileForm"
+      (ngSubmit)="onSveFile()"
     >
-      <i class="pi pi-cloud-upload px-2 pt-5 text-2xl text-bluegray-400"></i>
-      <span
-        class="px-3 pt-5 flex align-items-center justify-content-center font-bold border-round"
-        style="color: #0b85c3"
-        >Sube un archivo</span
+      <button
+        pButton
+        class="p-button-outlined border-300 w-full flex flex-column"
+        (click)="fileUpload.click()"
       >
-      <span
-        class="text-sm text-500 pt-1 flex align-items-center justify-content-center border-round"
-        >PDF</span
-      >
-      <input #fileUpload accept=".pdf" type="file" style="display: none" />
-    </button>
-    <div class="w-12 flex flex-wrap pt-3">
-      <div class="w-6 p-2 pl-0 flex align-items-center justify-content-center">
-        <button
-          pButton
-          pRipple
-          label="Cancelar"
-          icon="pi pi-times"
-          class="p-button-outlined p-button-secondary w-full"
-          (click)="hideAddFileDialog()"
-        ></button>
+        <i class="pi pi-cloud-upload px-2 pt-5 text-2xl text-bluegray-400"></i>
+        <span
+          class="px-3 pt-5 flex align-items-center justify-content-center font-bold border-round"
+          style="color: #0b85c3"
+          >Sube un archivo</span
+        >
+        <span
+          class="text-sm text-500 pt-1 flex align-items-center justify-content-center border-round"
+          >PDF</span
+        >
+        <input
+          #fileUpload
+          id="file"
+          type="file"
+          accept=".pdf"
+          style="display: none"
+          formControlName="file"
+          (change)="onFileUpload($event)"
+        />
+      </button>
+      <div class="w-12">
+        <small
+          id="file"
+          class="hidden"
+          [ngClass]="{
+            'p-error block text-left': isValidFileField('file')
+          }"
+          >Este campo no puede estar vacío.</small
+        >
       </div>
-      <div class="w-6 p-2 pr-0 flex align-items-center justify-content-center">
-        <button
-          pButton
-          pRipple
-          label="Editar"
-          icon="pi pi-check"
-          type="submit"
-          class="p-button-success w-full"
-        ></button>
+      <div class="w-12 flex flex-wrap pt-3">
+        <div
+          class="w-6 p-2 pl-0 flex align-items-center justify-content-center"
+        >
+          <button
+            pButton
+            pRipple
+            label="Cancelar"
+            icon="pi pi-times"
+            type="button"
+            class="p-button-outlined p-button-secondary w-full"
+            (click)="hideAddFileDialog()"
+          ></button>
+        </div>
+        <div
+          class="w-6 p-2 pr-0 flex align-items-center justify-content-center"
+        >
+          <button
+            pButton
+            pRipple
+            label="Editar"
+            icon="pi pi-check"
+            type="submit"
+            class="p-button-success w-full"
+          ></button>
+        </div>
       </div>
-    </div>
+    </form>
   </div>
 </p-dialog>
