feat: Implement forms to add new information

--- a/Front/Banco-de-Talentos/src/app/shared/components/educ-pers-crd/educ-pers-crd.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/educ-pers-crd/educ-pers-crd.component.html
@@ -162,7 +162,7 @@
               styleClass="w-full"
               dateFormat="mm/yy"
               inputId="stDate"
-              dataType="string"
+              view="month"
               appendTo="body"
               formControlName="stDate"
             ></p-calendar>
@@ -186,7 +186,7 @@
               styleClass="w-full"
               dateFormat="mm/yy"
               inputId="edDate"
-              dataType="string"
+              view="month"
               appendTo="body"
               formControlName="edDate"
             ></p-calendar>
@@ -356,7 +356,7 @@
             styleClass="w-full"
             dateFormat="mm/yy"
             inputId="editStDate"
-            dataType="string"
+            view="month"
             appendTo="body"
             formControlName="editStDate"
           ></p-calendar>
@@ -382,7 +382,7 @@
             styleClass="w-full"
             dateFormat="mm/yy"
             inputId="editEdDate"
-            dataType="string"
+            view="month"
             appendTo="body"
             formControlName="editEdDate"
           ></p-calendar>
