feat: Implement error handler interceptor

--- a/Front/Banco-de-Talentos/src/app/core/components/loader/loader.component.html
+++ b/Front/Banco-de-Talentos/src/app/core/components/loader/loader.component.html
@@ -1,9 +1,9 @@
 <ng-container *ngIf="isLoading">
   <div class="loader-container">
-    <div class="p-4 shadow-2 border-round w-full lg:w-3">
+    <div class="p-4 border-round w-full lg:w-3">
       <div class="text-center">
         <div class="mb-3">
-          <img src="assets/loader.svg" alt="loading" width="70" height="70" />
+          <img src="assets/loader.svg" alt="loading" width="75" height="75" />
         </div>
         <span class="text-600 font-medium line-height-3">{{ msg }}</span>
       </div>
