--- a/Front/Banco-de-Talentos/src/app/shared/components/certs-pers-crd/certs-pers-crd.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/certs-pers-crd/certs-pers-crd.component.html
@@ -144,7 +144,7 @@
           <button
             pButton
             pRipple
-            label="Editar"
+            label="Subir"
             icon="pi pi-check"
             type="submit"
             class="p-button-success w-full"
