--- a/Front/Banco-de-Talentos/src/app/shared/components/lang-pers-crd/lang-pers-crd.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/lang-pers-crd/lang-pers-crd.component.html
@@ -151,7 +151,7 @@
           <button
             pButton
             pRipple
-            label="Editar"
+            label="Agregar"
             icon="pi pi-check"
             type="submit"
             class="p-button-success w-full"
