--- a/Front/Banco-de-Talentos/src/app/shared/components/exp-pers-crd/exp-pers-crd.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/exp-pers-crd/exp-pers-crd.component.html
@@ -210,7 +210,7 @@
           <button
             pButton
             pRipple
-            label="Editar"
+            label="Agregar"
             icon="pi pi-check"
             type="submit"
             class="p-button-success w-full"
