--- a/Front/Banco-de-Talentos/src/app/shared/components/skills-pers-crd/skills-pers-crd.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/skills-pers-crd/skills-pers-crd.component.html
@@ -147,7 +147,7 @@
           <button
             pButton
             pRipple
-            label="Editar"
+            label="Agregar"
             icon="pi pi-check"
             type="submit"
             class="p-button-success w-full"
@@ -224,7 +224,7 @@
           <button
             pButton
             pRipple
-            label="Editar"
+            label="Agregar"
             icon="pi pi-check"
             type="submit"
             class="p-button-success w-full"
