--- a/Front/Banco-de-Talentos/src/app/shared/components/lang-pers-crd/lang-pers-crd.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/lang-pers-crd/lang-pers-crd.component.html
@@ -176,11 +176,12 @@
       <span class="text-lg md:text-xl font-semibold text-800">
         Edita tu experiencia
       </span>
-      <span
-        class="text-red-300 hover:text-red-500 text-sm font-light mx-1 cursor-pointer"
+      <button
+        class="text-red-300 hover:text-red-500 mx-1 cursor-pointer border-none bg-white"
+        (click)="confirm()"
       >
-        <i class="pi pi-trash"></i>
-      </span>
+        <i class="pi pi-trash text-lg hover:text-xl"></i>
+      </button>
     </div>
   </ng-template>
   <div class="w-12 flex flex-column align-items-center">
