--- a/Front/Banco-de-Talentos/src/app/features/talent/new-talent/new-talent.component.html
+++ b/Front/Banco-de-Talentos/src/app/features/talent/new-talent/new-talent.component.html
@@ -35,30 +35,6 @@
             <div class="p-4 pt-0">
                 <p-scrollPanel [style]="{ width: '100%', height: 'calc(100vh - 500px)', 'min-height': '400px' }">
                     <div>
-                        <h3 class="headerText">Nombre completo</h3>
-                        <p class="subHeaderText">Nombres</p>
-                        <input pInputText placeholder="Nombres" class="w-full" formControlName="names" [ngClass]="{ 'ng-invalid ng-dirty': isValidField('names') }"/>
-                        <p class="subHeaderText">Apellido paterno</p>
-                        <input pInputText placeholder="Apellido paterno" class="w-full" formControlName="surName" [ngClass]="{ 'ng-invalid ng-dirty': isValidField('surName') }"/>
-                        <p class="subHeaderText">Apellido materno</p>
-                        <input pInputText placeholder="Apellido materno" class="w-full" formControlName="secondSurName" [ngClass]="{ 'ng-invalid ng-dirty': isValidField('secondSurName') }"/>
-                    </div>
-                    <div>
-                        <h3 class="headerText">Locación</h3>
-                        <p class="subHeaderText">País</p>
-                        <p-dropdown [options]="countries" styleClass="w-full" class="w-full" placeholder="País" optionLabel="country" [showClear]="false" appendTo="body" formControlName="country" (onChange)="OnCountryChange()" [ngClass]="{ 'ng-invalid ng-dirty': isValidField('country') }"></p-dropdown>
-                        <p class="subHeaderText" *ngIf="newTalentForm.get('country')?.value != null">Ciudad</p>
-                        <p-dropdown *ngIf="newTalentForm.get('country')?.value != null" [options]="cities" styleClass="w-full" class="w-full" placeholder="Ciudad" optionLabel="city" [showClear]="false" appendTo="body" formControlName="city" [ngClass]="{ 'ng-invalid ng-dirty': isValidField('city') }"></p-dropdown>
-                    </div>
-                    <div>
-                        <h3 class="headerText">Telefono</h3>
-                        <p-dropdown [options]="countries" styleClass="w-full mb-2" class="w-full mb-2" placeholder="Codigo de País" optionLabel="country" [showClear]="false" appendTo="body" formControlName="callingCode" [ngClass]="{ 'ng-invalid ng-dirty': isValidField('callingCode') }"></p-dropdown>
-                        <div class="h-3rem p-inputgroup">
-                            <span class="p-inputgroup-addon w-5rem pr-0">{{ newTalentForm.get("callingCode")?.value == null ? "" : newTalentForm.get("callingCode")?.value.callingCode }}</span>
-                            <p-inputMask [style]="{ 'border-radius': '0', 'border-top-right-radius': '0.375rem', 'border-bottom-right-radius': '0.375rem' }" class="w-full h-full" styleClass="w-full h-full" mask="999-999-999" placeholder="999-999-999" formControlName="phone" [ngClass]="{ 'ng-invalid ng-dirty': isValidField('phone') }"></p-inputMask>
-                        </div>
-                    </div>
-                    <div>
                         <h3 class="headerText">Curriculum Vitae</h3>
                         <div class="flex flex-warp align-items-center justify-content-center">
                             <button pButton type="button" [style]="{'height': '126px'}" class="p-button-outlined border-300 w-full flex flex-column" (click)="photoUpload.click()" [ngClass]="{ 'border-red-200' : isValidField('cv') }">
@@ -82,13 +58,39 @@
                             </button>
                         </div>
                     </div>
-                    <div class="h-8rem">
-                        <h3 class="headerText">Descripción</h3>
-                        <textarea rows="5" cols="30" pInputTextarea placeholder="Descripción" class="w-full h-5rem" formControlName="description" [ngClass]="{ 'ng-invalid ng-dirty': isValidField('description') }"></textarea>
-                    </div>
-                    <div class="mt-4">
-                        <h3 class="headerText">Puesto actual</h3>
-                        <p-dropdown [options]="profiles" styleClass="w-full" class="w-full" placeholder="Puesto Actual" optionLabel="name" [showClear]="false" appendTo="body" formControlName="profile" [ngClass]="{ 'ng-invalid ng-dirty': isValidField('profile') }"></p-dropdown>
+                    <div>
+                        <div>
+                            <h3 class="headerText">Datos</h3>
+                            <p class="subHeaderText">Nombres</p>
+                            <input pInputText placeholder="Nombres" class="w-full" formControlName="names" [ngClass]="{ 'ng-invalid ng-dirty': isValidField('names') }"/>
+                            <p class="subHeaderText">Apellido paterno</p>
+                            <input pInputText placeholder="Apellido paterno" class="w-full" formControlName="surName" [ngClass]="{ 'ng-invalid ng-dirty': isValidField('surName') }"/>
+                            <p class="subHeaderText">Apellido materno</p>
+                            <input pInputText placeholder="Apellido materno" class="w-full" formControlName="secondSurName" [ngClass]="{ 'ng-invalid ng-dirty': isValidField('secondSurName') }"/>
+                        </div>
+                        <div>
+                            <h3 class="subHeaderText">Telefono</h3>
+                            <p-dropdown [options]="countries" styleClass="w-full mb-2" class="w-full mb-2" placeholder="Codigo de País" optionLabel="country" [showClear]="false" appendTo="body" formControlName="callingCode" (onChange)="onPhoneLocationChange()" [ngClass]="{ 'ng-invalid ng-dirty': isValidField('callingCode') }"></p-dropdown>
+                            <div class="h-3rem p-inputgroup">
+                                <span class="p-inputgroup-addon w-5rem pr-0">{{ newTalentForm.get("callingCode")?.value == null ? "" : newTalentForm.get("callingCode")?.value.callingCode }}</span>
+                                <p-inputMask [style]="{ 'border-radius': '0', 'border-top-right-radius': '0.375rem', 'border-bottom-right-radius': '0.375rem' }" class="w-full h-full" styleClass="w-full h-full" mask="999-999-999" placeholder="999-999-999" formControlName="phone" [ngClass]="{ 'ng-invalid ng-dirty': isValidField('phone') }"></p-inputMask>
+                            </div>
+                        </div>
+                        <div class="h-7rem">
+                            <h3 class="subHeaderText">Descripción</h3>
+                            <textarea rows="5" cols="30" pInputTextarea placeholder="Descripción" class="w-full h-5rem" formControlName="description" [ngClass]="{ 'ng-invalid ng-dirty': isValidField('description') }"></textarea>
+                        </div>
+                        <div>
+                            <h3 class="subHeaderText">Puesto actual</h3>
+                            <p-dropdown [options]="profiles" styleClass="w-full" class="w-full" placeholder="Puesto Actual" optionLabel="name" [showClear]="false" appendTo="body" formControlName="profile" [ngClass]="{ 'ng-invalid ng-dirty': isValidField('profile') }"></p-dropdown>
+                        </div>
+                        <div>
+                            <h3 class="headerText">Locación</h3>
+                            <p class="subHeaderText">País</p>
+                            <p-dropdown [options]="countries" styleClass="w-full" class="w-full" placeholder="País" optionLabel="country" [showClear]="false" appendTo="body" formControlName="country" (onChange)="OnCountryChange()" [ngClass]="{ 'ng-invalid ng-dirty': isValidField('country') }"></p-dropdown>
+                            <p class="subHeaderText" *ngIf="newTalentForm.get('country')?.value != null">Ciudad</p>
+                            <p-dropdown *ngIf="newTalentForm.get('country')?.value != null" [options]="cities" styleClass="w-full" class="w-full" placeholder="Ciudad" optionLabel="city" [showClear]="false" appendTo="body" formControlName="city" [ngClass]="{ 'ng-invalid ng-dirty': isValidField('city') }"></p-dropdown>
+                        </div>
                     </div>
                     <div class="pt-1">
                         <h3 class="headerText">Medios Sociales</h3>
