--- a/Front/Banco-de-Talentos/src/app/shared/components/certs-pers-crd/certs-pers-crd.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/certs-pers-crd/certs-pers-crd.component.html
@@ -12,8 +12,9 @@
       <ng-template let-product pTemplate="item">
         <div class="h-9rem w-full py-1">
           <div class="border-round px-2">
-            <div
-              class="w-full h-8rem border-round flex flex-column align-items-center"
+            <button
+              (click)="showDialog(product.idDocument)"
+              class="w-full h-8rem border-none border-round flex flex-column align-items-center cursor-pointer"
             >
               <div class="h-6rem w-full border-round-top overflow-hidden">
                 <img src="./assets/pdfIcon.svg" [alt]="" class="file-image" />
@@ -40,7 +41,7 @@
                   </div>
                 </div>
               </div>
-            </div>
+            </button>
           </div>
         </div>
       </ng-template>
@@ -61,6 +62,7 @@
     </button>
   </div>
 </div>
+
 <p-dialog
   [(visible)]="addFileDialog"
   [breakpoints]="{ '960px': '75vw', '640px': '100vw' }"
@@ -161,4 +163,21 @@
       </div>
     </form>
   </div>
+</p-dialog>
+
+<p-dialog
+  [modal]="true"
+  [draggable]="false"
+  [resizable]="false"
+  [(visible)]="display"
+  [breakpoints]="{ '960px': '75vw', '640px': '100vw' }"
+  [style]="{ width: '50vw', height: '80vh' }"
+>
+  <pdf-viewer
+    [src]="pdfSrc"
+    [render-text]="true"
+    [original-size]="true"
+    [fit-to-page]="true"
+    style="height: 100%"
+  ></pdf-viewer>
 </p-dialog>
